cmake_minimum_required(VERSION 2.6)

# Setup install
SET( INSTALL_DIR ${CMAKE_INSTALL_PREFIX} )
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

PROJECT(LandmarkTransform)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

ADD_EXECUTABLE(LandmarkTransform LandmarkTransform.cpp)
TARGET_LINK_LIBRARIES(LandmarkTransform ${VTK_LIBRARIES})
INSTALL( TARGETS LandmarkTransform RUNTIME DESTINATION ${INSTALL_DIR} )